--- a/.env
+++ b/.env
@@ -1,11 +1,12 @@
-# Ensure these match your pgAdmin details!
+# Database Configuration
 DB_USER=postgres
 DB_PASSWORD=123
 DB_HOST=localhost
-DB_PORT=5432                    
+DB_PORT=5432
 DB_DATABASE=dost_rms
+
+# Security Key
 JWT_SECRET=my_secret_key_123
 
-# Path to PostgreSQL Binaries (Adjust version number '16' if needed)
-PG_PATH="# Change '16' to your actual version number (14, 15, etc)
-PG_PATH="C:\Program Files\PostgreSQL\18\bin"
+# Backup Path (Cleaned up)
+PG_PATH="C:\\Program Files\\PostgreSQL\\18\\bin"
