ignore .env file

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Database Configuration
-DB_USER=postgres
-DB_PASSWORD=123
+DB_USER=nerve
+DB_PASSWORD=85112
 DB_HOST=localhost
 DB_PORT=5432
 DB_DATABASE=dost_rms
